--- a/public/Nitrocid/Resources/Languages/kor.json
+++ b/public/Nitrocid/Resources/Languages/kor.json
@@ -10122,6 +10122,106 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
       "text": "sayongja jeong-ui guseong {0}eul yeogjiglyeolhwahal su eobs-seubnida."
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_DESC",
+      "text": "i segsyeon-eneun deulaibeo seoljeong-i nayeoldoeeo issseubnida."
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTCONSOLEDRIVER_NAME",
+      "text": "hyeonjae konsol deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTCONSOLEDRIVER_DESC",
+      "text": "eotteon konsol deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTRNGDRIVER_NAME",
+      "text": "hyeonjae nansu saengseong-gi deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTRNGDRIVER_DESC",
+      "text": "eotteon nansu saengseong-gi deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTNETWORKDRIVER_NAME",
+      "text": "hyeonjae neteuwokeu deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTNETWORKDRIVER_DESC",
+      "text": "eotteon neteuwokeu deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTFILESYSTEMDRIVER_NAME",
+      "text": "hyeonjae pail siseutem deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTFILESYSTEMDRIVER_DESC",
+      "text": "eotteon pail siseutem deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCRYPTIONDRIVER_NAME",
+      "text": "hyeonjae amhohwa deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCRYPTIONDRIVER_DESC",
+      "text": "eotteon amhohwa deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTREGEXPDRIVER_NAME",
+      "text": "hyeonjae jeong-gyusig deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTREGEXPDRIVER_DESC",
+      "text": "eotteon jeong-gyusig deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTDEBUGLOGGERDRIVER_NAME",
+      "text": "hyeonjae dibeogeu logeo saengseong-gi deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTDEBUGLOGGERDRIVER_DESC",
+      "text": "eotteon dibeogeu logeo saengseong-gi deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCODINGDRIVER_NAME",
+      "text": "hyeonjae inkoding deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCODINGDRIVER_DESC",
+      "text": "eotteon inkoding deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTHWPROBERDRIVER_NAME",
+      "text": "hyeonjae hadeuweeo peulobeo deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTHWPROBERDRIVER_DESC",
+      "text": "eotteon hadeuweeo peulobeo deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTSORTINGDRIVER_NAME",
+      "text": "hyeonjae jeonglyeol deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTSORTINGDRIVER_DESC",
+      "text": "eotteon jeonglyeol deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTINPUTDRIVER_NAME",
+      "text": "hyeonjae iblyeog deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTINPUTDRIVER_DESC",
+      "text": "eotteon iblyeog deulaibeoleul sayonghasigessseubnikka?"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCODINGASYMMETRICDRIVER_NAME",
+      "text": "hyeonjae bidaeching inkoding deulaibeo"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCODINGASYMMETRICDRIVER_DESC",
+      "text": "eotteon bidaeching inkoding deulaibeoleul sayonghasigessseubnikka?"
     }
   ]
 }
