--- a/public/Nitrocid/Resources/Languages/arb-T.json
+++ b/public/Nitrocid/Resources/Languages/arb-T.json
@@ -10147,6 +10147,106 @@
     {
       "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_CUSTOMCONFIGDESERIALIZE",
       "text": "لا يمكن إلغاء تسلسل التكوين المخصص {0}"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_DESC",
+      "text": "يسرد هذا القسم إعدادات برنامج التشغيل."
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTCONSOLEDRIVER_NAME",
+      "text": "برنامج تشغيل وحدة التحكم الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTCONSOLEDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل وحدة التحكم الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTRNGDRIVER_NAME",
+      "text": "برنامج تشغيل مولد الأرقام العشوائية الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTRNGDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل مولد الأرقام العشوائية الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTNETWORKDRIVER_NAME",
+      "text": "برنامج تشغيل الشبكة الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTNETWORKDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل الشبكة الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTFILESYSTEMDRIVER_NAME",
+      "text": "برنامج تشغيل نظام الملفات الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTFILESYSTEMDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل نظام الملفات الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCRYPTIONDRIVER_NAME",
+      "text": "برنامج تشغيل التشفير الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCRYPTIONDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل التشفير الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTREGEXPDRIVER_NAME",
+      "text": "برنامج تشغيل التعبيرات العادية الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTREGEXPDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل التعبيرات العادية الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTDEBUGLOGGERDRIVER_NAME",
+      "text": "برنامج تشغيل مُولد مُسجل التصحيح الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTDEBUGLOGGERDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل مُولد مُسجل التصحيح الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCODINGDRIVER_NAME",
+      "text": "برنامج تشغيل الترميز الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCODINGDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل الترميز الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTHWPROBERDRIVER_NAME",
+      "text": "برنامج تشغيل مُستكشف الأجهزة الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTHWPROBERDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل مُستكشف الأجهزة الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTSORTINGDRIVER_NAME",
+      "text": "برنامج تشغيل الفرز الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTSORTINGDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل الفرز الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTINPUTDRIVER_NAME",
+      "text": "برنامج تشغيل الإدخال الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTINPUTDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل الإدخال الذي ترغب في استخدامه؟"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCODINGASYMMETRICDRIVER_NAME",
+      "text": "برنامج تشغيل الترميز غير المتماثل الحالي"
+    },
+    {
+      "loc": "NKS_SETTINGS_DRIVERS_CURRENTENCODINGASYMMETRICDRIVER_DESC",
+      "text": "ما هو برنامج تشغيل الترميز غير المتماثل الذي ترغب في استخدامه؟"
     }
   ]
 }
